cmake_minimum_required(VERSION 3.10)
project(doruk C)

set(CMAKE_C_STANDARD 99)

add_executable(doruk main.c basics/string_examples.c basics/pointer_examples.c basics/pointer_examples.h basics/string_examples.h data-structures/arrays/dynamic_array_c.c data-structures/arrays/dynamic_array_c.h hackerrank/day11.c hackerrank/day11.h basics/strings-manip.c basics/strings-manip.h data-structures/hash_tables.c data-structures/hash_tables.h data-structures/stacks.c data-structures/stacks.h hackerrank/balanced_brackets.c hackerrank/balanced_brackets.h data-structures/queues.c data-structures/queues.h basics/for_examples.c basics/for_examples.h data-structures/arrays/arrays.c data-structures/arrays/arrays.h basics/data_types.c basics/data_types.h data-structures/linked_list.c data-structures/linked_list.h)